--- a/vkefu/src/main/resources/application.properties
+++ b/vkefu/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.driver-class=com.mysql.jdbc.Driver
 
 #jpa≈‰÷√
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+#########################
+#config of socketServer
+###########################
+im.server.port=8078
+im.server.host=localhost
