--- a/vkefu/pom.xml
+++ b/vkefu/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.xxxx.servcie</groupId>
-	<artifactId>xxxx-springboot</artifactId>
+	<groupId>com.vkefu</groupId>
+	<artifactId>springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>xxxx-springboot</name>
+	<name>springboot</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -119,16 +119,22 @@
 			<version>0.2</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>com.fasterxml</groupId>
 			<artifactId>classmate</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>com.github.crab2died</groupId>
 			<artifactId>Excel4J</artifactId>
 			<version>2.1.4-Alpha</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.corundumstudio.socketio</groupId>
+			<artifactId>netty-socketio</artifactId>
+			<version>1.7.12</version>
 		</dependency>
 
 	</dependencies>
