--- a/vkefu/src/main/resources/application.properties
+++ b/vkefu/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#server
+server.port=18100
 #至于具体哪个配置文件会被加载,需要在application.properties文件通过spring.profiles.active属性,其值对应{profile}值 application-{profile}.properties
 #如果程序打成了jar,可以通过执行 java -jar xxx.jar --spring.profiiles.active=test
 spring.profiles.active=dev
@@ -7,10 +9,8 @@ spring.datasource.url=jdbc:mysql://101.132.36.144/merl?useUnicode=true&character
 spring.datasource.username=web
 spring.datasource.password=12345678
 spring.datasource.driver-class=com.mysql.jdbc.Driver
-
 #jpa配置
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-
 #########################
 #config of socketServer
 ###########################
