--- a/vkefu/src/main/resources/application.properties
+++ b/vkefu/src/main/resources/application.properties
@@ -17,3 +17,20 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 im.server.port=8078
 im.server.host=localhost
 
+
+spring.freemarker.allow-request-override=false  
+spring.freemarker.allow-session-override=false  
+spring.freemarker.cache=true  
+spring.freemarker.check-template-location=true  
+spring.freemarker.content-type=text/html  
+spring.freemarker.enabled=true  
+spring.freemarker.expose-request-attributes=false  
+spring.freemarker.expose-session-attributes=false  
+spring.freemarker.expose-spring-macro-helpers=true  
+spring.freemarker.prefer-file-system-access=true  
+spring.freemarker.suffix=.html
+spring.freemarker.template-loader-path=classpath:/templates/  
+spring.freemarker.settings.template_update_delay=0  
+spring.freemarker.settings.default_encoding=UTF-8  
+spring.freemarker.settings.classic_compatible=true  
+spring.freemarker.order=1
