--- a/vkefu/src/main/resources/application.properties
+++ b/vkefu/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=18100
 spring.profiles.active=dev
 
 # ˝æ›‘¥≈‰÷√
-spring.datasource.url=jdbc:mysql://101.132.36.144/merl?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://101.132.36.144/cs?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=web
 spring.datasource.password=12345678
 spring.datasource.driver-class=com.mysql.jdbc.Driver
